# apallzac-tools

./: .oxlintrc.json  oxlint.json  package.json  tailwind.config.ts  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: rust.md  vue.md
.github/workflows/: publish.yaml
public/tests/: examen ejemplo 1.xlsx  examen ejemplo 2.xlsx  examen ejemplo 3.xlsx  examen ejemplo miss col.xlsx
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: exam_controller_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_state/: controllers.rs  mod.rs
src-tauri/src/belt_promotion_exam/: belt_promotion_exam_controller.rs  belts.rs  candidate.rs  commands.rs  mod.rs
src-tauri/src/exam_controller/: field_render.rs  mod.rs
src-tauri/src/excel_reader/: column_configurations.rs  mod.rs  workbook.rs
src-tauri/src/printer_utils/: mod.rs
src-tauri/src/system_utils/: mod.rs
src/assets/: base.css
src/components/loaded-data-table/: loaded-data-table.vue
src/components/previewer/: previewer.vue
src/components/print-btn/: print-btn.vue
src/components/printer-configuration/: printer-configuration.vue
src/pages/belt-grade-promossion-exam/: belt-grade-promossion-exam.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/stores/: app.ts
src/theme/: dark.ts
src/types/: Candidate.type.ts
